<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_favourite_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.anton.windforecast.windcast.favouritesdetails.FavouriteDetailsActivity">

    <TextView
        android:id="@+id/tv_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/five_day_forecast"
        android:textColor="?android:textColorPrimary"/>

    <TextView
        android:id="@+id/tv_details_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_details_title"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:text="@string/time_period"/>

    <TextView
        android:id="@+id/tv_details_time_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_details_city"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:text="@string/city"/>

    <org.eazegraph.lib.charts.ValueLineChart
        android:id="@+id/wind_chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_chart"
        android:layout_below="@id/tv_details_time_period"
        app:egCurveSmoothness="0.4"
        app:egIndicatorLineColor="@color/colorAccent"
        app:egIndicatorTextColor="@color/colorAccent"
        app:egLegendHeight="@dimen/size_legend_chart"
        app:egShowDecimal="true"
        app:egShowLegendBeneathIndicator="true"
        app:egShowStandardValue="true"
        app:egUseCubic="true"
        app:egUseOverlapFill="true"/>

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress"
        android:visibility="gone"/>
</RelativeLayout>
